Fix: corrected overflow issue on join page

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -114,7 +114,6 @@
 
     &.join {
       z-index: 1;
-      overflow: hidden;
       .inner {
         position: absolute;
         left: 10%;
